# folio

./: .gitignore  .gitleaks.toml  CLAUDE.md  README.md  build.gradle.kts  gradlew  settings.gradle.kts
.github/workflows/: secret-scan.yml
scripts/: build-dmg.sh  generate-icon.sh
src/main/resources/: logback.xml
tasks/plans/: word-compat-editor-l3-pandoc.md
web/: .gitignore  package-lock.json  package.json
web/src/: App.tsx  index.css
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: lib.rs
web/src-tauri/src/commands/: ai_commands.rs  file_commands.rs  git_commands.rs  mod.rs  settings_commands.rs  ssh_commands.rs  terminal_commands.rs
web/src/components/: ErrorBoundary.tsx
web/src/components/Editor/: BreadcrumbBar.tsx  EditorArea.tsx  EditorTabs.tsx  HtmlEditorToolbar.tsx  MonacoWrapper.tsx  QuickActionMenu.tsx  ghostText.ts  inlineEdit.tsx  quickActions.ts
web/src/components/FileTree/: FileTree.tsx  FileTreeContextMenu.tsx  PromptDialog.tsx
web/src/components/Git/: GitPanel.tsx
web/src/components/Layout/: AiChatPanel.tsx  (+25 more)
web/src/hooks/: useFileSystem.ts  useGit.ts  useScrollSync.ts  useSession.ts  useSettings.ts  useTheme.ts
web/src/store/: useAppStore.ts
web/src/types/: index.ts
web/src/utils/: aiStream.ts  dragState.ts  encodings.ts  fileIcons.tsx  formatter.ts  htmlActions.ts  imageExtractor.ts  languages.ts  linkExtractor.ts  markdownActions.ts  markdownUtils.ts  mentions.ts  outlineParser.ts  promptTemplates.ts  saveAll.ts  snippets.ts
(+61 files in other folders)
