[package]
name = "folio"
version = "1.0.0"
description = "A modern text editor with Markdown support"
authors = ["Folio Project"]
edition = "2021"

[lib]
name = "folio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }  # devtools: keep on so future bugs can be diagnosed in release builds
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
dirs = "5"
tokio = { version = "1", features = ["sync"] }
